--- a/index.html
+++ b/index.html
@@ -8,5 +8,13 @@
 </head>
 <body>
   <h1>Git commands</h1>  
+<ul>
+    <li>git commit</li>
+    <li>git branch</li>
+    <li>git checkout</li>
+    <li>git merge</li>
+    <li>git fetch</li>
+    <li>git push</li>
+</ul>
 </body>
 </html>
