--- a/gallery.html
+++ b/gallery.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    
+   <img src="./img/1.jpg" alt=""> 
+   <img src="./img/2.jpg" alt="">
 </body>
 </html>
