--- a/gallery.html
+++ b/gallery.html
@@ -9,5 +9,8 @@
 <body>
    <img src="./img/1.jpg" alt=""> 
    <img src="./img/2.jpg" alt="">
+   <div>
+   <a href="./index.html">Git commands</a>
+   </div>
 </body>
 </html>
