--- a/index.html
+++ b/index.html
@@ -16,5 +16,8 @@
     <li>git fetch</li>
     <li>git push</li>
 </ul>
+<div>
+    <a href="./gallery.html">Red pandas</a>
+</div>
 </body>
 </html>
